--- a/giangvien/quanlydiem/index.html
+++ b/giangvien/quanlydiem/index.html
@@ -6,7 +6,7 @@
         <thead>
             <tr>
                 <th scope="col">STT</th>
-                <th scope="col">Tên Lớp</th>
+                <th scope="col" style="width: 0px;">Tên Lớp</th>
                 <th scope="col"></th>
             </tr>
         </thead>
