--- a/giangvien/quanlylophoc/index.html
+++ b/giangvien/quanlylophoc/index.html
@@ -8,7 +8,8 @@
         </select>
     </div>
     <div class="col-md-3">
-        <input id="tenLop" type="text" class="form-control" style="border-radius: 15px" placeholder="Tên lớp" id="tenLop">
+        <input id="tenLop" type="text" class="form-control" style="border-radius: 15px" placeholder="Tên lớp"
+            id="tenLop">
     </div>
     <div class="col-3 col-md-auto">
         <button class="btn btn-primary" style="border-radius: 15px" onclick="renderDanhSachLopQLLH()">Tìm Kiếm</button>
@@ -19,14 +20,14 @@
         <thead>
             <tr>
                 <th scope="col">STT</th>
-                <th scope="col">Tên Lớp</th>
+                <th scope="col" style="width: 0px;">Tên Lớp</th>
                 <th scope="col">Kỳ học</th>
                 <th scope="col">Tài liệu môn học</th>
                 <th scope="col">Điểm danh</th>
             </tr>
         </thead>
         <tbody id="listLop">
-            
+
         </tbody>
     </table>
 </div>
