--- a/quantrivien/quanlybangtin/index.html
+++ b/quantrivien/quanlybangtin/index.html
@@ -21,7 +21,7 @@
                         <form id="formAdd" class="row g-3 needs-validation" novalidate>
                             <div class="col-md-12">
                                 <label for="validationServer02" class="form-label">Nội Dung</label>
-                                <textarea style="height: 500px;" cols="80" rows="5" type="text" class="form-control"
+                                <textarea style="height: 500px;" type="text" class="form-control"
                                     id="editor" required></textarea>
                                 <div class="invalid-feedback">
                                     Nội dung không được để trống
