--- a/sinhvien/lophoc/tailieumonhoc.html
+++ b/sinhvien/lophoc/tailieumonhoc.html
@@ -1,5 +1,5 @@
 <div class="row text-center py-3">
-    <h3>Tài Liệu Môn Học</h3>
+    <h3 id="title">Tài Liệu Môn Học</h3>
 </div>
 
 <div style="background-color: #f5f5f5; border-radius: 7px; border: 1px solid black; margin-top: 50px !important;">
@@ -8,13 +8,10 @@
             <tr>
                 <th scope="col">STT</th>
                 <th scope="col">Tên tài liệu</th>
-                <th scope="col">File tài liệu</th>
+                <th scope="col">Thời gian đăng</th>
             </tr>
         </thead>
-        <tbody id="listDiemlop">
-            <th>1</th>
-            <th>Toán cao cấp</th>
-            <td>link://sadsaffgssadfgergw</td>
+        <tbody id="listTaiLieu">
         </tbody>
     </table>
 </div>
