--- a/doimatkhau.html
+++ b/doimatkhau.html
@@ -1,36 +1,61 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form class="needs-validation" novalidate>
+            <form class="needs-validation" novalidate onsubmit=event.preventDefault()>
                 <h3 class="text-center mt-4">Đổi mật khẩu</h3>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="email1" class="mb-2">Mật khẩu cũ</label>
-                        <input maxlength="32" type="password" required class="form-control" value="" id="matKhauCu">
+                        <label for="email1" class="mb-2">Mật khẩu cũ:</label>
+                        <input maxlength="32" type="password" required class="form-control" value="" id="matKhauCu"
+                            required>
                         <div class="invalid-feedback">
                             Mật khẩu cũ không được để trống
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="mb-2 mt-2">Mật khẩu mới</label>
-                        <input maxlength="32" type="password" required class="form-control" value="" id="matKhauMoi">
+                        <label class="mb-2 mt-2">Mật khẩu mới:</label>
+                        <input maxlength="32" type="password" required class="form-control" value="" id="matKhauMoi"
+                            required>
                         <div class="invalid-feedback">
                             Mật khẩu mới không được để trống
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="mb-2 mt-2">Nhập lại mật khẩu mới</label>
+                        <label class="mb-2 mt-2">Nhập lại mật khẩu mới:</label>
                         <input maxlength="32" type="password" required class="form-control" value=""
-                            id="xacThucMatKhauMoi">
+                            id="xacThucMatKhauMoi" required>
                         <div class="invalid-feedback">
                             Nhập lại mật khẩu mới không được để trống
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer border-top-0 d-flex justify-content-center">
+                    <button id="submit" type="submit" class="btn btn-primary" onclick=doiMatKhau()>Cập nhật</button>
+                </div>
             </form>
-            <div class="modal-footer border-top-0 d-flex justify-content-center">
-                <button id="submit" type="submit" class="btn btn-primary" onclick=doiMatKhau()>Cập nhật</button>
-            </div>
         </div>
     </div>
 </div>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
