--- a/sinhvien/index.html
+++ b/sinhvien/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -18,6 +21,7 @@
     <script src="../js/helper.js"></script>
     <script src="../js/sinhvien/renderSinhvien.js"></script>
     <script src="../js/sinhvien/sinhvien.js"></script>
+
 </head>
 
 <script>
@@ -47,7 +51,7 @@
 
                     </div>
                     <div id="Dang-nhap " class="col-md-6 col-6 col-sm-6 "
-                        style="font-size:15px;color:grey;padding-top: 10px;">
+                        style="font-size:15px; color:grey; padding-top: 10px;">
                         <div class="dropdown pb-4 text-end">
                             <div class="block">
                                 <a href="#" class="text-white text-decoration-none" data-bs-toggle="dropdown"
@@ -141,37 +145,9 @@
 <script>
     const name = user.taiKhoan.tenDangNhap;
     document.getElementById("name").innerHTML = name;
-</script>
-<script>
     $("#dmk").load("../doimatkhau.html");
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function () {
-        'use strict'
-
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        var forms = document.querySelectorAll('.needs-validation')
-
-
-        // Loop over them and prevent submission
-        Array.prototype.slice.call(forms)
-            .forEach(function (form) {
-                document.getElementById("submit").addEventListener('click', function (event) {
-                    if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    }
-
-                    form.classList.add('was-validated')
-                }, false)
-            })
-    })()
 </script>
 
-<script>
-    $(document).ready(function () {
-        console.log("ready")
-        $("show").click();
-    }); 
-</script>
+
 
 </html>
